--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
+* {
+	box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+	text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media (max-width: 599px) {
+	.Account-info {
+		display: grid;
+		padding: 1rem 2% 1% 2%;
+		grid-template-columns: 1fr;
+		justify-content: space-around;
+		grid-gap: 1rem;
+		align-items: center;
+	}
+
+	.Account-info :nth-child(1) {
+		background: #ede7f6;
+		padding: 1.5rem;
+		height: 100%;
+		width: 100%;
+		border-radius: 1rem;
+	}
+
+	.Account-info :nth-child(2) {
+		background: #ede7f6;
+		padding: 1.5rem;
+		width: 100%;
+		height: 100%;
+		border-radius: 1rem;
+	}
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+@media (min-width: 600px) {
+	.Account-info {
+		display: grid;
+		padding: 1rem 2% 1% 2%;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 1rem;
+		align-items: center;
+	}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+	.Account-info :nth-child(1) {
+		background: #ede7f6;
+		text-align: left;
+		height: 100%;
+		padding: 1.5rem;
+		border-radius: 1rem;
+		width: fit-content;
+	}
+	.Account-info :nth-child(2) {
+		place-self: end;
+		justify-content: center;
+		align-self: start;
 
-.App-link {
-  color: #61dafb;
-}
+		background: #ede7f6;
+		height: fit-content;
+		padding: 1.5rem;
+		width: fit-content;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+		border-radius: 1rem;
+	}
 }
