--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,24 @@
 .input {
 	float: left;
 	margin-right: 0.5rem;
+	margin-bottom: 0.4rem;
 }
 
 .btn {
-	float: left;
+	margin-bottom: 0.5rem;
+	float: left;	
+}
+
+button{
+	padding: 0.2rem 0.5rem 0.3rem 0.5rem;
+	background-color: #ede7f6;
+	border-radius: 5px;
+	border-style: none;
+}
+
+button:hover {
+	cursor: pointer;
+	background-color: #ede0d6;
 }
 
 form {
