--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 .Contract > h2 {
 	width: fit-content;
 	margin: auto;
-	background-color: #fafafa;
+	background-color: ivory;
 	padding: 1rem;
 	border-radius: 1rem;
 }
@@ -87,6 +87,11 @@ hr {
 		width: 100%;
 		height: 100%;
 		border-radius: 1rem;
+	}
+
+	.Contract-details{
+		width: min-content;
+		margin: 1rem auto 1rem auto;
 	}
 }
 
