--- a/src/App.css
+++ b/src/App.css
@@ -66,32 +66,49 @@ hr {
 @media (max-width: 599px) {
 	.Account-info {
 		display: grid;
-		padding: 0 0 1% 0;
-		grid-template-columns: 1fr;
-		justify-content: space-around;
-		grid-gap: 1rem;
+		width: 100%;
+		padding: 1% 0 1% 0;
+		grid-template-columns: 100%;
+		row-gap: 1rem;
 		align-items: center;
+		justify-content: safe;
 	}
 
+
 	.Account-info :nth-child(1) {
+		width: inherit;
+		margin: auto;
+		height: 100%;
+		overflow-wrap: break-word;
 		background: #ede7f6;
 		padding: 1.5rem;
-		height: 100%;
-		width: 100%;
-		border-radius: 1rem;
+		border-radius: 1.5rem;
 	}
 
 	.Account-info :nth-child(2) {
+		width: inherit;
+		margin: auto;
+		height: 100%;
+		overflow-wrap: break-word;
 		background: #ede7f6;
 		padding: 1.5rem;
-		width: 100%;
 		height: 100%;
-		border-radius: 1rem;
+		border-radius: 1.5rem;
+	}
+
+	.Contract{
+		border-radius: 1.5rem;
 	}
 
 	.Contract-details{
-		width: min-content;
+		border-radius: 1.5rem;
+		overflow-wrap: break-word;
+		width: inherit;
 		margin: 1rem auto 1rem auto;
+	}
+
+	.Contract > h2 {
+		border-radius: 1.5rem;
 	}
 }
 
