--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,11 @@ button:hover {
 	background-color: #ede0d6;
 }
 
+button:disabled{
+	background-color: #dde0d6;
+	cursor: not-allowed;
+}
+
 form {
 	padding-bottom: 1.5rem;
 	margin-bottom: 1.5rem;
